# aidocs

./: .gitignore  AI培训三天课程脉络图.md  AI培训三天课程脉络图_1754297993.docx  AI培训三天课程脉络图_1754298400.docx  AI培训三天课程脉络图_1754298886.docx  AI培训三天课程脉络图_1754299521.docx  AI培训三天课程脉络图_1754301646.docx  AI培训三天课程脉络图_1754302455.docx  AI培训简明计划.md  AI文档工作空间.code-workspace  BUILD_EXE.md  COMPLETION_REPORT.md  FILES_CHECKLIST.md  LICENSE  MD2DOCX-README.md  MD2DOCX使用指南.docx  MD2DOC_验证报告.md  README.md  README_PACKAGE.md  VSCODE_TASKS_GUIDE.md  aidocs.code-workspace  build_exe.ps1  comprehensive_test_content.md  comprehensive_test_document.docx  convert_ai_training.py  create_test_doc.py  create_test_simple.py  enhanced_test_document.docx  import_tasks.ps1  md2docx.py  md2docx_optimized.py  package.json  prepare_dist.ps1  pyproject.toml  requirements.txt  setup-dev-env.ps1  task_1_6_completion_report.md  task_1_7_completion_report.md  vscode-tasks-portable.json  广州集装箱码头AI智能运维技术沙龙方案.docx  (+5 more)
config/: md2doc.yml  settings.py
data/templates/: metadata.json
data/templates/导入/: 技术研究笔记模板.md
data/templates/工作模板/: 日报模板.md
data/templates/项目模板/: 项目复盘模板.md
docs/: IT运维AI提示词库.md  MD2DOCX使用指南.md  Rag实战.md  Word功能使用指南.md  Word文档支持说明.md  md2doc-prd.md  md2doc-tasks.md  md2doc说明文档.md  prd.md  tasks.md  任务1.5完成报告.md  任务进度报告_2025_01_16.md  参数修改记录系统-数据库设计.docx  参数修改记录系统-数据库设计.md  参数修改记录系统-用户故事.docx  参数修改记录系统-用户故事.md  文档模板管理系统设计.md  跨平台tasks配置说明.md  阶段一完成总结.md  项目进度跟踪.md
docs/沙龙/: AI赋能需求与设计初探.md  us.md  us到架构设计步骤.md  需求到设计提示词.md
examples/: image_processor_demo.py
output/: task1_5_complete.docx
scripts/: dev_start.ps1  setup_venv.ps1  vscode_cleanup.ps1
src/api/: main.py
src/api/models/: models.py
src/api/routers/: categories.py  documents.py  search.py  tags.py  templates.py
src/api/schemas/: schemas.py
src/core/: ai_service.py  database.py  enhanced_word_parser.py  template_manager.py  word_parser.py
src/gui/: document_editor.py  document_outline_navigator.py  find_replace_dialog.py  main_window.py  template_manager_gui.py
src/gui/widgets/: __init__.py  image_viewer.py  style_viewer.py  table_viewer.py  word_enhanced_viewer.py
src/md2doc/: __init__.py
src/md2doc/cli/: __init__.py  (+1 more)
tests/md2doc/: conftest.py  run_tests.py
(+24 files in other folders)
